Adds Sinopia Local Admin Metadata reference.
refs https://github.com/LD4P/sinopia_api/issues/229
